# firmware

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bridge.h  build.sh  main.c
.github/: dependabot.yml
.github/workflows/: deploy.yml  lint.yml  push.yml
esp32/: platformio.ini
esp32/proto/: packet.proto
esp32/src/: BLE_packet.cpp  BLE_packet.h  BLE_server.cpp  DecodeException.cpp  DecodeException.h  WiFiStorage.cpp  WiFiStorage.h  WrongPacketException.cpp  WrongPacketException.h  packet.pb.c  packet.pb.h
lcd-2004/: lcd_2004_i2c.c
pi/: CMakeLists.txt  README.md
pi/lcd-2004/: lcd_2004_i2c.h
pi/nec_receive_library/: CMakeLists.txt  nec_receive.c
pi/rust_bridge/src/: lib.rs
pi/rust_lib/src/: lib.rs
pi/rust_lib/src/pico/: device.rs  mod.rs
pi/rust_lib/src/pico/perifs/: ir.rs
rust_bridge/: Cargo.toml  build.rs
rust_bridge/src/: c_functions.rs  lib.rs
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
rust_lib/src/pico/: device.rs  mod.rs  perifs.rs  pins.rs
rust_lib/src/pico/perifs/: i2c.rs  internal_led.rs  lcd2004a.rs  mod.rs
start_rust/: Cargo.toml
start_rust/src/: lib.rs
