[package]
name = "rust_bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr_core = {version = "0.2.5", default-features = false }
cty = {version = "0.2.2"}

[build-dependencies]
bindgen = "0.59.2"
